K8S/flask/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-sensor-app
  labels:
    app: iot-sensor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-sensor-app
  template:
    metadata:
      labels:
        app: iot-sensor-app
    spec:
      containers:
        - name: iot-sensor-app
          image: omeravi/iot-sensor-app:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo "Waiting for DB...";
              until nc -z $DATABASE_HOST $DATABASE_PORT; do
                sleep 2;
              done;
              echo "DB is up, starting app";
              python app.py
          ports:
            - containerPort: 5000
