K8S/flask/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: iot-sensor-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
